# Project-1-Document-Portal

./: .gitignore  pyproject.toml  requirements.txt  setup.py  test.py
config/: config.yaml
exception/: custom_exception.py
logger/: custom_logger.py
model/: models.py
notebook/: experiments.ipynb  pydantic_exp.ipynb  test.ipynb
prompt/: prompt_library.py
src/document_analyzer/: data_analysis.py  data_ingestion.py
src/document_compare/: data_ingestion.py  document_comparator.py
utils/: config_loader.py  model_loading.py
